// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonsMoreLess should show "one less" button disabled 1`] = `
<div>
  <div
    className="oneMoreToDoBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": undefined,
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgb(229, 229, 229)",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "default",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={-1}
      type="button"
    >
      <div
        style={
          Object {
            "backgroundColor": false,
            "borderRadius": 2,
            "height": 36,
            "muiPrepared": true,
            "top": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "margin": 0,
              "muiPrepared": true,
              "opacity": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "userSelect": "none",
            }
          }
        >
          +
        </span>
      </div>
    </button>
  </div>
  0/5
  <div
    className="oneDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            -
          </span>
        </div>
      </div>
    </button>
  </div>
  order's name
  <div
    className="allDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            finis
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="oneMoreToDoBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      disabled
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:rgb(229, 229, 229);border:10px;border-radius:2px;box-sizing:border-box;cursor:default;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
        <span style="color:rgba(0, 0, 0, 0.3);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
          +
        </span>
      </div>
    </button>
  </div>
  0/5
  <div
    class="oneDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            -
          </span>
        </div>
      </div>
    </button>
  </div>
  order&#39;s name
  <div
    class="allDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            finis
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;

exports[`ButtonsMoreLess should show "one more" and "all done" buttons disabled 1`] = `
<div>
  <div
    className="oneMoreToDoBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            +
          </span>
        </div>
      </div>
    </button>
  </div>
  5/5
  <div
    className="oneDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": undefined,
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgb(229, 229, 229)",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "default",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={-1}
      type="button"
    >
      <div
        style={
          Object {
            "backgroundColor": false,
            "borderRadius": 2,
            "height": 36,
            "muiPrepared": true,
            "top": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "margin": 0,
              "muiPrepared": true,
              "opacity": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "userSelect": "none",
            }
          }
        >
          -
        </span>
      </div>
    </button>
  </div>
  order's name
  <div
    className="allDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": undefined,
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "rgb(229, 229, 229)",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "default",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={-1}
      type="button"
    >
      <div
        style={
          Object {
            "backgroundColor": false,
            "borderRadius": 2,
            "height": 36,
            "muiPrepared": true,
            "top": 0,
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span
          style={
            Object {
              "color": "rgba(0, 0, 0, 0.3)",
              "fontSize": 14,
              "fontWeight": 500,
              "letterSpacing": 0,
              "margin": 0,
              "muiPrepared": true,
              "opacity": 1,
              "paddingLeft": 16,
              "paddingRight": 16,
              "position": "relative",
              "textTransform": "uppercase",
              "userSelect": "none",
            }
          }
        >
          finis
        </span>
      </div>
    </button>
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="oneMoreToDoBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            +
          </span>
        </div>
      </div>
    </button>
  </div>
  5/5
  <div
    class="oneDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      disabled
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:rgb(229, 229, 229);border:10px;border-radius:2px;box-sizing:border-box;cursor:default;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
        <span style="color:rgba(0, 0, 0, 0.3);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
          -
        </span>
      </div>
    </button>
  </div>
  order&#39;s name
  <div
    class="allDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      disabled
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:rgb(229, 229, 229);border:10px;border-radius:2px;box-sizing:border-box;cursor:default;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
        <span style="color:rgba(0, 0, 0, 0.3);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
          finis
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`ButtonsMoreLess should show all buttons enable 1`] = `
<div>
  <div
    className="oneMoreToDoBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            +
          </span>
        </div>
      </div>
    </button>
  </div>
  2/5
  <div
    className="oneDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            -
          </span>
        </div>
      </div>
    </button>
  </div>
  order's name
  <div
    className="allDoneBtn"
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
               0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontFamily": "Roboto, sans-serif",
        "margin": "12",
        "minWidth": 88,
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      }
    }
  >
    <button
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
          "backgroundColor": "#ffffff",
          "border": 10,
          "borderRadius": 2,
          "boxSizing": "border-box",
          "cursor": "pointer",
          "display": "inline-block",
          "fontFamily": "Roboto, sans-serif",
          "fontSize": "inherit",
          "fontWeight": "inherit",
          "height": 36,
          "lineHeight": "36px",
          "margin": 0,
          "muiPrepared": true,
          "outline": "none",
          "padding": 0,
          "position": "relative",
          "textAlign": "center",
          "textDecoration": "none",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "verticalAlign": null,
          "width": "100%",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
      >
        <div
          style={
            Object {
              "backgroundColor": false,
              "borderRadius": 2,
              "height": 36,
              "muiPrepared": true,
              "top": 0,
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            }
          }
        >
          <span
            style={
              Object {
                "color": "rgba(0, 0, 0, 0.87)",
                "fontSize": 14,
                "fontWeight": 500,
                "letterSpacing": 0,
                "margin": 0,
                "muiPrepared": true,
                "opacity": 1,
                "paddingLeft": 16,
                "paddingRight": 16,
                "position": "relative",
                "textTransform": "uppercase",
                "userSelect": "none",
              }
            }
          >
            finis
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
------------HTML PREVIEW---------------
<div>
  <div
    class="oneMoreToDoBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            +
          </span>
        </div>
      </div>
    </button>
  </div>
  2/5
  <div
    class="oneDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            -
          </span>
        </div>
      </div>
    </button>
  </div>
  order&#39;s name
  <div
    class="allDoneBtn"
    style="-webkit-tap-highlight-color:rgba(0,0,0,0);background-color:#ffffff;border-radius:2px;box-shadow:0 1px 6px rgba(0, 0, 0, 0.12),
           0 1px 4px rgba(0, 0, 0, 0.12);box-sizing:border-box;color:rgba(0, 0, 0, 0.87);display:inline-block;font-family:Roboto, sans-serif;margin:12;min-width:88px;mui-prepared:;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
  >
    <button
      style="-webkit-tap-highlight-color:rgba(0, 0, 0, 0);background-color:#ffffff;border:10px;border-radius:2px;box-sizing:border-box;cursor:pointer;display:inline-block;font-family:Roboto, sans-serif;font-size:inherit;font-weight:inherit;height:36px;line-height:36px;margin:0;mui-prepared:;outline:none;padding:0;position:relative;text-align:center;text-decoration:none;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;vertical-align:;width:100%;"
      type="button"
    >
      <div>
        <div style="background-color:;border-radius:2px;height:36px;mui-prepared:;top:0;transition:all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;">
          <span style="color:rgba(0, 0, 0, 0.87);font-size:14px;font-weight:500;letter-spacing:0;margin:0;mui-prepared:;opacity:1;padding-left:16px;padding-right:16px;position:relative;text-transform:uppercase;user-select:none;">
            finis
          </span>
        </div>
      </div>
    </button>
  </div>
</div>
`;
